<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_blue"
        android:orientation="vertical"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            android:gravity="center"
            android:padding="@dimen/dp12"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp18"
            android:gravity="center"
            android:padding="@dimen/dp12"
            android:text="@string/login_to_imdb"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18sp" />

        <TextView
            style="@style/txtlogin"
            android:layout_marginTop="@dimen/dp50"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            style="@style/edttxtlogin"
            android:imeOptions="actionNext"
            android:background="@color/color_blue"
            android:nextFocusDown="@id/et_password"
            android:singleLine="true"
            android:hint="@string/please_email_address" />

        <TextView
            style="@style/txtlogin"
            android:layout_marginTop="@dimen/dp12"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_password"
            style="@style/edttxtlogin"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:background="@color/color_blue"
            android:hint="@string/please_enter_password" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp30"

            android:layout_marginTop="@dimen/dp40"
            android:layout_marginRight="@dimen/dp30"
            android:background="@color/color_FF8383D6"
            android:gravity="center"
            android:padding="@dimen/dp12"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_18sp" />

    </LinearLayout>
</layout>